--- a/page-Mezhyhirya-Uman-pearls-of-love.html
+++ b/page-Mezhyhirya-Uman-pearls-of-love.html
@@ -255,17 +255,20 @@
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
-
+                                        <h5>8 Октября</h5>     
                                         <p><strong>20:00</strong>
                                             Выезд из Центра Запорожья после минутки позитива.
                                             Едем на комфортабельном транспорте тур.класса (раскладные сидения), TV
                                             Заберем Вас Автовокзал - Фестивальная - Металлургов - Каховская (уточняйте
                                             при бронировании).
+                                            Как всегда безопасно и быстро! Ведь с Ваши наш супер - организатор! 
                                         </p>
-                                        <h4>День 1 </h4>
+                                        <hr>
+                                        
+                                        <h5>9 Октября</h5>
                                         <p><strong>11:00-12:00 </strong>
                                             Прибытие в гостиницу, заселение.
-                                            <p />
+                                        </p>
                                         <p><strong>12:20-13:00 </strong>
                                             Обед в гостинице:
                                             настоящий украинский борщик со сметанкой,
@@ -293,7 +296,8 @@
                                             увидеть и услышать!
                                         </p>
                                         <hr>
-                                        <h4>День 2 </h4>
+                                        
+                                        <h5>10 Октября</h5>
                                         <p><strong>06:00-07:00 </strong>
                                             Супер предложение! Полет на самолете 3 пассажирских места и 30 минут кайфа
                                             всего 1000 грн/чел! Отдельная оплата за трансфер и полет, по желанию. Кто
@@ -342,7 +346,7 @@
                                         </p>
                                         <hr>
                                         <p>
-                                            <i> *время указано предварительно и может меняться незначительно для
+                                            <i> *Время указано предварительно и может меняться незначительно для
                                                 улучшения отдыха туристам!</i>
                                         </p>
                                     </div>
