--- a/page-Mezhyhirya-Uman-pearls-of-love.html
+++ b/page-Mezhyhirya-Uman-pearls-of-love.html
@@ -254,9 +254,9 @@
                                 </div>
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
-                                    <div class="card-body txt-alg-jf">
-                                        <h5>8 Октября</h5>     
-                                        <p><strong>20:00</strong>
+                                    <div class="card-body">
+                                        <h5 style="width: 150px; background-color: #f8f9fa; border-radius: .25rem; text-align: center; padding: .25em .4em;">8 Октября</h5>     
+                                        <p class="txt-alg-jf"><strong>20:00</strong>
                                             Выезд из Центра Запорожья после минутки позитива.
                                             Едем на комфортабельном транспорте тур.класса (раскладные сидения), TV
                                             Заберем Вас Автовокзал - Фестивальная - Металлургов - Каховская (уточняйте
