--- a/page-Mezhyhirya-Uman-pearls-of-love.html
+++ b/page-Mezhyhirya-Uman-pearls-of-love.html
@@ -36,6 +36,12 @@
         href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
     <!-- //google fonts -->
+    
+    <style>
+        .badge-l {
+            width: 150px; background-color: #f8f9fa; border-radius: .25rem; text-align: center; padding: .25em .4em;
+        }
+    </style>
 
 </head>
 
@@ -252,10 +258,11 @@
                                         </button>
                                     </h5>
                                 </div>
+                                
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body">
-                                        <h5 style="width: 150px; background-color: #f8f9fa; border-radius: .25rem; text-align: center; padding: .25em .4em;">8 Октября</h5>     
+                                        <h5 class="badge-l">8 Октября</h5>     
                                         <p class="txt-alg-jf"><strong>20:00</strong>
                                             Выезд из Центра Запорожья после минутки позитива.
                                             Едем на комфортабельном транспорте тур.класса (раскладные сидения), TV
