--- a/page-Mezhyhirya-Uman-pearls-of-love.html
+++ b/page-Mezhyhirya-Uman-pearls-of-love.html
@@ -352,6 +352,27 @@
                                     Проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест;
                                     (от количества людей в группе, места в транспорте по датам оплат)
                                 </li>
+                                <li class="list-group-item list-group-item-success">
+                                    транспорт "Легкая дорога!" тур.класса с раскладными сиденьями, ТВ; 
+                                </li>
+                                 <li class="list-group-item list-group-item-success">
+                                     1 ночь в уютнейшей гостинице «Умань» 2 и 3х местные номера(если 2е селим в 2х местный) удобства в номере; 
+                                </li>
+                                 <li class="list-group-item list-group-item-success">
+                                     гостиница в центре города все в шаговой доступности;  
+                                     входной билет в Парк Новая Софиевка или Старая Софиевка на выбор;
+                                </li>
+                                <li class="list-group-item list-group-item-success">
+                                     входной билет парк Межигорье Киев. обл;
+                                </li>
+                                <li class="list-group-item list-group-item-success">
+                                     входной билет с экскурсией парк Александрия Киев обл.;
+                                </li>
+                                <li class="list-group-item list-group-item-success">
+                                     супер позитивное сопровождение представителя нашей компании,
+                                     магнит от Нового поворота,
+                                     самое замечательное настроение.
+                                </li>
                             </ul>
                         </div>
 
@@ -359,9 +380,13 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                    Полеты на самолете 1000 грн/чел
-                                    или воздушном шаре 3500 грн/чел с трансфером к месту
-                                    вылета с гостиницы и обратно(по-желанию);
+                                    Питание в дороге;
+                                </li>
+                                <li class="list-group-item list-group-item-success">
+                                     экскурсия по Новой или Старой Софиевке Умань (по-желанию- 50грн/чел* цена на август 2021);
+                                </li>
+                                <li class="list-group-item list-group-item-success">
+                                     экскурсия Межигорью (по-желанию- 50грн/чел* цена на август 2021).
                                 </li>
                             </ul>
                         </div>
