--- a/page-Mezhyhirya-Uman-pearls-of-love.html
+++ b/page-Mezhyhirya-Uman-pearls-of-love.html
@@ -2,14 +2,14 @@
 <html lang="ru">
 
 <head>
-    <title>Межигорье, Умань - жемчуг любви  | Новый поворот</title>
+    <title>Межигорье. Умань. Перлина Кохання | Новый поворот</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Межигорье, Умань - жемчуг любви  ">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Межигорье. Умань. Перлина Кохання  ">
     <meta name="keywords"
-        content="Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Межигорье, Умань - жемчуг любви " />
+        content="Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Межигорье. Умань. Перлина Кохання " />
     <!-- Open Graph data-->
-    <meta property="og:title" content="Межигорье, Умань - жемчуг любви ">
+    <meta property="og:title" content="Межигорье. Умань. Перлина Кохання">
     <meta property="og:description" content="Дух романтики и красивейшей природы!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Mezhyhirya-Uman-pearls-of-love.html" />
@@ -98,14 +98,14 @@
                             <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                             <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
                             <!--<li class="breadcrumb-item"><a class="text-primary" href="packages-page-two.html">Туры, стр.2</a></li>-->
-                            <li class="breadcrumb-item active" aria-current="page">Межигорье, Умань - жемчуг любви </li>
+                            <li class="breadcrumb-item active" aria-current="page">Межигорье. Умань. Перлина Кохання</li>
                         </ol>
                     </nav>
                 </div>
                 <!-- //Хлебные крошки -->
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
-                    <h3 class="title">Межигорье, Умань - жемчуг любви </h3>
+                    <h3 class="title">Межигорье. Умань. Перлина Кохання</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     
