--- a/page-Mezhyhirya-Uman-pearls-of-love.html
+++ b/page-Mezhyhirya-Uman-pearls-of-love.html
@@ -400,7 +400,7 @@
                         <span class="badge rounded-pill bg-secondary text-white"> Туризм </span>
                         <span class="badge rounded-pill bg-secondary text-white"> Межигорье </span>
                         <span class="badge rounded-pill bg-secondary text-white"> Умань </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Жемчуг Любви </span>
+                        <span class="badge rounded-pill bg-secondary text-white"> Перлина Кохання </span>
                     
                     </div>
                 </div>
