--- a/page-Mezhyhirya-Uman-pearls-of-love.html
+++ b/page-Mezhyhirya-Uman-pearls-of-love.html
@@ -382,10 +382,10 @@
                                 <li class="list-group-item list-group-item-danger ">
                                     Питание в дороге;
                                 </li>
-                                <li class="list-group-item list-group-item-success">
+                                <li class="list-group-item list-group-item-danger ">
                                      экскурсия по Новой или Старой Софиевке Умань (по-желанию- 50грн/чел* цена на август 2021);
                                 </li>
-                                <li class="list-group-item list-group-item-success">
+                                <li class="list-group-item list-group-item-danger ">
                                      экскурсия Межигорью (по-желанию- 50грн/чел* цена на август 2021).
                                 </li>
                             </ul>
