--- a/page-Mezhyhirya-Uman-pearls-of-love.html
+++ b/page-Mezhyhirya-Uman-pearls-of-love.html
@@ -110,7 +110,7 @@
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     
                     <!-- Картинка -->
-                <!--   <img src="/images/Baloon-fast/balloon-fastival-max.jpg" alt="news image" class="img-fluid">   -->
+                    <img src="/images/Mezhyhirya-Uman-pearls-of-love/inside-Mezhyhirya-Uman-pearls-of-love.jpg" alt="news image" class="img-fluid">  
                     <!-- //Картинка -->
                     
                     <div class="blog-two-two">
