--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -117,7 +117,7 @@
                         <a href="https://novipovorot.pp.ua/page-Roses-Farm-Waterfall.html">
                             <img src="./images/Roses-Farm-Waterfall/home-Roses-Farm-Waterfall.jpg" alt="Розы, Ферма, Водопад" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>495грн.</span></p>
+                      <!--  <p><span class="fa fa-tags"></span> <span>495грн.</span></p>-->
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожская обл.</h6>
@@ -128,7 +128,7 @@
                         </h5>
                         <p class="">Тур на Розовое поле </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 4 Сентября </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> Под Заказ </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
