--- a/page-Mezhyhirya-Uman-pearls-of-love.html
+++ b/page-Mezhyhirya-Uman-pearls-of-love.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Дух романтики и красивейшей природы!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Mezhyhirya-Uman-pearls-of-love.html" />
-    <!--<meta property="og:image" content="/images/Baloon-fast/balloon-fastival-max.jpg">-->
+    <meta property="og:image" content="./images/Mezhyhirya-Uman-pearls-of-love/inside-Mezhyhirya-Uman-pearls-of-love.jpg">
     <!--End Open Graph data-->
 
     <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
@@ -110,7 +110,7 @@
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     
                     <!-- Картинка -->
-                    <img src="/images/Mezhyhirya-Uman-pearls-of-love/inside-Mezhyhirya-Uman-pearls-of-love.jpg" alt="news image" class="img-fluid">  
+                    <img src="./images/Mezhyhirya-Uman-pearls-of-love/inside-Mezhyhirya-Uman-pearls-of-love.jpg" alt="news image" class="img-fluid">  
                     <!-- //Картинка -->
                     
                     <div class="blog-two-two">
