--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-zoo.html">
-                            <img src="images/zoo-min.jpg" alt="Wine" class="img-fluid" />
+                            <img src="/images/Zoo/pop-zoo.jpg" alt="zoo" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>400грн.</span></p>
                     </div>
