--- a/index.html
+++ b/index.html
@@ -525,8 +525,8 @@
                     <h4 class="destination mb-3"> Зоопарк </h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-zoo.html">
-                            <img src="images/Lions-and-Horses/pop-lions-and-horses.jpg" class="img-fluid"
-                                alt="Львята И Лошадки">
+                            <img src="images/Zoo/pop-zoo.jpg" class="img-fluid"
+                                alt="Зоопарк">
                         </a>
                         <div class="rating">
                             <ul>
