--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -526,20 +526,19 @@
     <!--
         ***  Популярные Направления  ***
     -->
-
     <section class="destinations py-5" id="destinations">
         <div class="container py-xl-5 py-lg-3">
             <h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Популярные Направления</h3>
             <p class="text mt-2 mb-5 text-center">Туры выходного дня "Новый Поворот"</p>
             <div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 
-                <!-- Фестиваль Воздушных Шаров  -->
+                <!-- Межигорье. Умань. Перлина Кохання  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Фестиваль</h4>
+                    <h4 class="destination mb-3"> Межигорье </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
-                            <img src="images/Baloon-fast/balloon-fastival-max.jpg" class="img-fluid"
-                                alt="Фестиваль Воздушных Шаров">
+                        <a href="https://novipovorot.pp.ua/page-Mezhyhirya-Uman-pearls-of-love.html">
+                            <img src="/images/Mezhyhirya-Uman-pearls-of-love/pop-Mezhyhirya-Uman-pearls-of-love.jpg" class="img-fluid"
+                                alt="Межигорье. Умань. Перлина Кохання">
                         </a>
                         <div class="rating">
                             <ul>
@@ -553,14 +552,14 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Фестиваль</h4>
+                            <h4> Межигорье </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Фестиваль Воздушных Шаров  -->
+                <!-- //Межигорье. Умань. Перлина Кохання  -->
 
-               <!-- Харьков, Хризантемы, Диснейленд -->
+                <!-- Харьков, Хризантемы, Диснейленд -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
                     <h4 class="destination mb-3">Харьков </h4>
                     <div class="image-position position-relative">
@@ -613,13 +612,13 @@
                 </div>
                 <!-- //Розовое озеро  -->
 
-                <!-- Львята И Лошадки -->
+                <!-- Зоопарк  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
                     <h4 class="destination mb-3"> Зоопарк </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-lions-and-horses.html">
-                            <img src="images/Lions-and-Horses/pop-lions-and-horses.jpg" class="img-fluid"
-                                alt="Львята И Лошадки">
+                        <a href="https://novipovorot.pp.ua/page-zoo.html">
+                            <img src="images/Zoo/pop-zoo.jpg" class="img-fluid"
+                                alt="Зоопарк">
                         </a>
                         <div class="rating">
                             <ul>
@@ -633,12 +632,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Львята И Лошадки</h4>
+                            <h4> Зоопарк </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Львята И Лошадки -->
+                <!-- //Зоопарк  -->
 
             </div>
         </div>
