--- a/packages.html
+++ b/packages.html
@@ -581,12 +581,12 @@
                 </div>
                 <!-- //Харьков, Хризантемы, Диснейленд -->
 
-                <!-- Розовое озеро  -->
+                <!-- Набережная  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Oзеро</h4>
+                    <h4 class="destination mb-3">Набережная</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Pink-Lake.html">
-                            <img src="images/pop-Pink-Lake.jpg" class="img-fluid" alt="Розовое Oзеро">
+                        <a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html">
+                            <img src="/images/pop-walk-on-Dnieper.jpg" class="img-fluid" alt="Набережная">
                         </a>
                         <div class="rating">
                             <ul>
@@ -600,12 +600,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Розовое Oзеро</h4>
+                            <h4>Набережная</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Розовое озеро  -->
+                <!-- //Набережная  -->
 
                 <!-- Зоопарк  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
