--- a/page-zhu-zhu-park-Dnipro.html
+++ b/page-zhu-zhu-park-Dnipro.html
@@ -143,10 +143,10 @@
 
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
                             <span class="txt-alg-jf">
-                                Цена билета до 21 сентября: взрослые <strong>520 грн.</strong>, дети до 12 лет <strong> 470
+                                Цена билета до 21 сентября: взрослые <strong>520 грн.</strong>, дети  от 3 до 12 лет <strong> 470
                                     грн.</strong>;
                                 <hr>
-                                С 15 сентября с 22 сентября: взрослые <strong>540 грн.</strong>, дети до 12 лет<strong>490 
+                                С 15 сентября с 22 сентября: взрослые <strong>540 грн.</strong>, дети от 3 до 12 лет<strong>490 
                                     грн.</strong>;
                                 <hr>
                                
