--- a/page-example.html
+++ b/page-example.html
@@ -3,7 +3,7 @@
 
 <head>
      <!-- Заголовок -->
-    <title>Жу-жу Парк | Новый поворот</title>
+    <title> Заголовок тура | Новый поворот</title>
      <!-- //Заголовок -->
   
     <meta name="viewport" content="width=device-width, initial-scale=1">
