--- a/page-example.html
+++ b/page-example.html
@@ -169,12 +169,12 @@
                                 Цена билета до -Дата-: взрослые 
                                  <strong>-Цена- грн.</strong>, 
                                    дети  от 3 до 12 лет 
-                                 <strong>Цена грн.</strong>;
+                                 <strong>-Цена- грн.</strong>;
                                  <hr>
                                  С -Дата- : взрослые 
                                  <strong>-Цена- грн.</strong>, 
                                    дети от 3 до 12 лет
-                                 <strong>Цена грн.</strong>;
+                                 <strong>-Цена- грн.</strong>;
                                  <hr>
                                  <i>*Примечание </i>
                             </span>
