--- a/index.html
+++ b/index.html
@@ -301,63 +301,63 @@
             </p>
             <div class="row">
 
-                <!--  Вилково, Устрицы И Шабо -->
+                <!--  Вольногорские Мальдивы -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Vilkovo-Oysters-Shabo.html">
-                            <img src="/images/Vilkovo-Oysters-Shabo/home-Vilkovo-Oysters-Shabo.jpg"
-                                alt="Vilkovo-Oysters-Shabo" class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-Volnogorsk-Maldives.html">
+                            <img src="/images/Volnogorsk-Maldives/home-Volnogorsk-Maldives.jpg"
+                                alt="Volnogorsk" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span> 2975грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span> 685грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Одесская обл.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Днепропетровская обл.</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Vilkovo-Oysters-Shabo.html">
-                                Вилково, Устрицы И Шабо
+                            <a href="https://novipovorot.pp.ua/page-Volnogorsk-Maldives.html">
+                                Вольногорские Мальдивы
                             </a>
                         </h5>
-                        <p class=""> Венеция по УКРАИНСКИ! </p>
+                        <p class=""> Потрясающие барханы </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>11 - 12 Сентября</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>03 Октября</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Вилково, Устрицы И Шабо  -->
+                <!--  //Вольногорские Мальдивы  -->
 
-                <!--  Яхтклуб И AQUAZOO  -->
+                <!--  Жу-Жу Парк  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html">
-                            <img src="images/Yacht-club-and-Aquazoo/home-Yacht-club-and-Aquazoo.jpg" alt="baloon-fast"
+                        <a href="https://novipovorot.pp.ua/page-zhu-zhu-park-Dnipro.html">
+                            <img src="./images/Zhu-zhu-park-Dnipro/home-zhu-zhu-park-Dnipro.jpg" alt="zhu-zhu"
                                 class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>520грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожская обл.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Днепропетровская обл.</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html">
-                                Яхтклуб И AQUAZOO
+                            <a href="https://novipovorot.pp.ua/page-zhu-zhu-park-Dnipro.html">
+                                Жу-Жу Парк
                             </a>
                         </h5>
                         <p class="">
-                            Трогательный зоопарк и яхтклуб...
+                            Шикарный выходной...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 05 Сентября </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 25 Сентября </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Яхтклуб И AQUAZOO  -->
+                <!-- //Жу-Жу Парк -->
 
                 <!-- Харьков, Хризантемы, Диснейленд  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Kharkiv-Chrysanthemums-Disneyland.html">
-                            <img src="/images/Kharkiv-Chrysanthemums-Disneyland/home-Kharkiv-Chrysanthemums-Disneyland.jpg" alt="baloon-fast"
+                            <img src="/images/Kharkiv-Chrysanthemums-Disneyland/home-Kharkiv-Chrysanthemums-Disneyland.jpg" alt="Kharkiv"
                                 class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>975грн.</span></p>
