--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         <p><span class="fa fa-tags"></span> <span> 685грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Днепропетровская обл.</h6>
+                        <h6 class="mt-1" style="letter-spacing: 0px;"><span class="fa fa-map-marker mr-2"></span>Днепропетровская обл.</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Volnogorsk-Maldives.html">
                                 Вольногорские Мальдивы
@@ -336,7 +336,7 @@
                         <p><span class="fa fa-tags"></span> <span>520грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Днепропетровская обл.</h6>
+                        <h6 class="mt-1" style="letter-spacing: 0px;"><span class="fa fa-map-marker mr-2"></span>Днепропетровская обл.</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-zhu-zhu-park-Dnipro.html">
                                 Жу-Жу Парк
