--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                             </a>
                         </h5>
                         <p class="">
-                            Шикарный выходной...
+                            Шикарный выходной для детей и взрослых
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 25 Сентября </span></li>
