--- a/booking.html
+++ b/booking.html
@@ -356,6 +356,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    
+    <script src="./scripts/script.js"></script>
 
     <script>
         console.log("Туры выходного дня 'Новый Поворот'");
