--- a/page-Volnogorsk-Maldives.html
+++ b/page-Volnogorsk-Maldives.html
@@ -135,6 +135,7 @@
                             <!-- Подзаголовок -->
                             <h4 class="mb-3">
                               Вольногорские Мальдивы с дегустацией вин. Дача Архитектора
+			      <img src="/images/Emoji/like.gif" alt="smile" height="20px">
                             </h4>
                             <!-- //Подзаголовок -->
                       
@@ -147,8 +148,6 @@
                             </p>
                             <p class="txt-alg-jf">
                               Дача Архитектора, это мистические и очень красивое место. 
-                            </p>
-			    <p class="txt-alg-jf">
                               Место силы и энергии, веры и упорства, место где стоит набраться сил и заряда на всю осень. 
                             </p>
                             <!-- Описание прогарммы тура -->
