--- a/page-Volnogorsk-Maldives.html
+++ b/page-Volnogorsk-Maldives.html
@@ -149,6 +149,7 @@
                             <p class="txt-alg-jf">
                               Дача Архитектора, это мистические и очень красивое место. 
                               Место силы и энергии, веры и упорства, место где стоит набраться сил и заряда на всю осень. 
+			      <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
                             </p>
                             <!-- Описание прогарммы тура -->
                      </div>
@@ -270,7 +271,9 @@
                                         </p>
                                         <p class="txt-alg-jf"><strong> 18:30* </strong>
                                             Мы уже в Запорожье, довольные возвращаемся домой чтоб поделиться 
-                                            впечатлениями с друзьями и близкими (но еще лучше их взять с собой).<br>
+                                            впечатлениями с друзьями и близкими (но еще лучше их взять с собой).
+					    <img src="/images/Emoji/smile-gif.gif" alt="smile" height="20px">
+					    <br>
                                             Выкладываем сториз и посты в 
                                           
 <!-- В ссылках соц.сетей, необходимо исправить ссылку на данную страницу -->
@@ -618,7 +621,8 @@
                                             обязательно отмечаем @dovgalyv.zp, Довгаль Юлия, @novipovorot, 
                                             всем кто отметит +10000 к карму и наша благодарочка ;* 
                                             Ждем Ваши отзывы после туров <a href="https://novipovorot.pp.ua/about.html">на нашем сайте</a> и в 
-                                          <a href="https://g.page/r/Cdm-EtbnpCKPEAg/review">Гугл мапс Новый поворот Запорожье</a> 
+                                            <a href="https://g.page/r/Cdm-EtbnpCKPEAg/review">Гугл мапс Новый поворот Запорожье</a> 
+					    <img src="/images/Emoji/wink.gif" alt="smile" height="20px">
                                         </p>
                                         
                                         <hr>
