--- a/page-zhu-zhu-park-Dnipro.html
+++ b/page-zhu-zhu-park-Dnipro.html
@@ -118,7 +118,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">25 Сентября  2021</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">17 Октября  2021</span>
                                 </li>
                             </ul>
                         </div>
@@ -143,10 +143,10 @@
 
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
                             <span class="txt-alg-jf">
-                                Цена билета до 21 сентября: взрослые <strong>520 грн.</strong>, дети  от 3 до 12 лет <strong> 470
+                                Цена билета при брони до 10 октября: взрослые <strong>520 грн.</strong>, дети  от 3 до 12 лет <strong> 470
                                     грн.</strong>;
                                 <hr>
-                                С 15 сентября с 22 сентября: взрослые <strong>540 грн.</strong>, дети от 3 до 12 лет<strong>490 
+                                С 11 октября: взрослые <strong>540 грн.</strong>, дети от 3 до 12 лет<strong>490 
                                     грн.</strong>;
                                 <hr>
                                
