--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -124,7 +124,7 @@
                                 <li>
                                     <!-- Дата -->
                                     <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">05
-                                        Сентября </span>
+                                        30 октября </span>
                                     <!-- //Дата -->
                                 </li>
                             </ul>
@@ -159,24 +159,18 @@
                             <br />
 
                             <span class="txt-alg-jf">
-                                Цена: <u>520 грн.</u> при бронировании до <strong> 10 августа</strong>,
+                                Цена: <u>520 грн.</u> при бронировании до <strong> 15 октября</strong>,
                                 <u>500 грн.</u> 3 - 18 лет,
                                 до 3-х лет бесплатно <i>(без предоставления отдельного места в транспорте).</i>
                             </span>
                             <hr>
 
                             <span class="txt-alg-jf">
-                                Цена: <u>540 грн.</u> при бронировании с <strong>11 по 23 августа</strong>
+                                Цена: <u>540 грн.</u> при бронировании с <strong> с 16 октября</strong>
                                 <u>520 грн.</u> 3 - 18 лет,
                                 до 3-х лет бесплатно <i>(без предоставления отдельного места в транспорте).</i>
                             </span>
                             <hr>
-
-                            <span class="txt-alg-jf">
-                                Цена: <u>560 грн.</u> при бронировании с <strong>24 июля</strong>,
-                                <u>540 грн.</u> 3 - 18 лет,
-                                до 3-х лет бесплатно <i>(без предоставления отдельного места в транспорте).</i>
-                            </span>
                         </div>
                         <!-- //Alert info -->
 
