--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                             Шикарный выходной для детей и взрослых
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 25 Сентября </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 17 Октября </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -380,10 +380,10 @@
                 </div>
                 <!--  //Харьков, Хризантемы, Диснейленд -->
 
-                <!--  Зоопарк Пылышенко -->
+                <!--  Межигорье. Умань. Перлина Кохання -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-zoo.html">
+                        <a href="https://novipovorot.pp.ua/page-Mezhyhirya-Uman-pearls-of-love.html">
                             <img src="/images/zoo-min.jpg" alt="zoo" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>400грн.</span></p>
@@ -391,16 +391,16 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-zoo.html">Зоопарк-Замок-Oзеро</a>
+                            <a href="https://novipovorot.pp.ua/page-Mezhyhirya-Uman-pearls-of-love.html">Межигорье. Умань. Перлина Кохання</a>
                         </h5>
-                        <p class="">Зоопарк Пылышенко-Замок Попова-Oзеро</p>
+                        <p class="">Межигорье. Умань. Перлина Кохання</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>19 Сентября</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>9-10 Октября</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Зоопарк Пылышенко -->
+                <!--  //Межигорье. Умань. Перлина Кохання -->
                 
             </div>
             <div class="view-package text-center mt-4">
