--- a/index.html
+++ b/index.html
@@ -380,23 +380,24 @@
                 </div>
                 <!--  //Харьков, Хризантемы, Диснейленд -->
 
-                <!--  Межигорье. Умань. Перлина Кохання -->
+                 <!-- Межигорье. Умань. Перлина Кохання -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Mezhyhirya-Uman-pearls-of-love.html">
-                            <img src="/images/zoo-min.jpg" alt="zoo" class="img-fluid" />
+                            <img src="/images/Mezhyhirya-Uman-pearls-of-love/home-Mezhyhirya-Uman-pearls-of-love.jpg"
+                                alt="Mezhyhirya-Uman-pearls-of-love" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>400грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>2900грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Украина</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Mezhyhirya-Uman-pearls-of-love.html">Межигорье. Умань. Перлина Кохання</a>
                         </h5>
-                        <p class="">Межигорье. Умань. Перлина Кохання</p>
+                        <p class="">Лучшие места!</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>9-10 Октября</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>09 - 10 Октября</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
                 </div>
