--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -626,12 +626,12 @@
                 </div>
                 <!-- //Набережная  -->
 
-                <!-- Зоопарк  -->
+                <!-- Жу-Жу Парк  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3"> Зоопарк </h4>
+                    <h4 class="destination mb-3">Жу-Жу Парк</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-zoo.html">
-                            <img src="images/Zoo/pop-zoo.jpg" class="img-fluid"
+                        <a href="https://novipovorot.pp.ua/page-zhu-zhu-park-Dnipro.html">
+                            <img src="./images/Zhu-zhu-park-Dnipro/pop-Zhu-zhu-park-Dnipro.jpg" class="img-fluid"
                                 alt="Зоопарк">
                         </a>
                         <div class="rating">
@@ -646,12 +646,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4> Зоопарк </h4>
+                            <h4>Жу-Жу Парк</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Зоопарк  -->
+                <!-- //Жу-Жу Парк  -->
 
             </div>
         </div>
