--- a/packages-page-three.html
+++ b/packages-page-three.html
@@ -255,12 +255,12 @@
                 </div>
                 <!-- //Харьков, Хризантемы, Диснейленд -->
 
-               <!-- Набережная  -->
+                <!-- Набережная  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Набережная</h4>
+                    <h4 class="destination mb-3">Львов На Выходные</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html">
-                            <img src="/images/pop-walk-on-Dnieper.jpg" class="img-fluid" alt="Набережная">
+                        <a href="https://novipovorot.pp.ua/page-Lviv-for-weekend.html">
+                            <img src="./images/Lviv-for-weekend/pop-Lviv-for-weekend.jpg" class="img-fluid" alt="Набережная">
                         </a>
                         <div class="rating">
                             <ul>
@@ -274,7 +274,7 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Набережная</h4>
+                            <h4>Львов На Выходные</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
