--- a/page-example.html
+++ b/page-example.html
@@ -109,9 +109,9 @@
                             <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                             <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
                             <!--<li class="breadcrumb-item"><a class="text-primary" href="packages-page-two.html">Туры, стр.2</a></li>-->
-                          <!-- Название тура -->
-                            <li class="breadcrumb-item active" aria-current="page">  Название тура </li>
-                          <!-- //Название тура -->
+                          <!-- VILLA DEL VINO -->
+                            <li class="breadcrumb-item active" aria-current="page"> VILLA DEL VINO </li>
+                          <!-- //VILLA DEL VINO -->
                         </ol>
                     </nav>
                 </div>
