--- a/page-Villa-Del-Vino.html
+++ b/page-Villa-Del-Vino.html
@@ -125,7 +125,7 @@
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     
                     <!-- Картинка -->
-                    <img src="Ссылка на картинку" alt="Картинка" class="img-fluid">  
+                    <img src="images/Villa-Del-Vino/inside-Villa-Del-Vino.jpg" alt="Картинка" class="img-fluid">  
                     <!-- //Картинка -->
                     
                     <div class="blog-two-two">
