--- a/page-Villa-Del-Vino.html
+++ b/page-Villa-Del-Vino.html
@@ -132,9 +132,9 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <!-- 14 Октября 2021 -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel"> Дата тура </span>
-                                    <!-- //14 Октября 2021-->
+                                    <!--  Дата тура -->
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel"> 14 октября </span>
+                                    <!-- // Дата тура -->
                                 </li>
                             </ul>
                         </div>
